overflow fix

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -307,6 +307,8 @@ hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow:hidden;
+
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
